<resources>
    <string name="app_name">PaintApp</string>
    <string name="Color">color</string>
    <string name="Save">Save</string>
    <string name="lineWidth">Line Width</string>
    <string name="Erase">erase</string>
    <string name="clear">clear</string>
    <string name="label_name">Alpha</string>
    <string name="label_red">Red</string>
    <string name="label_green">Green</string>
    <string name="label_blue">Blue</string>
    <string name="set_color">Set Color</string>
</resources>
