<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/colorId"
        android:icon="@drawable/board"
        android:title="@string/Color"
        app:showAsAction="always" />
    <item
        android:id="@+id/saveId"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/Save" />
    <item
        android:id="@+id/lineWidth"
        android:icon="@drawable/signature"
        android:title="@string/lineWidth"
        app:showAsAction="always" />
    <item
        android:id="@+id/eraseId"
        android:icon="@drawable/eraser"
        android:title="@string/Erase"
        app:showAsAction="always" />
    <item
        android:id="@+id/clearId"
        android:title="@string/clear" />
</menu>